output/multichaincapital_p5_25_124/foundry_validation/F-001_Team_fee_is_never_removed_from_reflected/forge_stdout_attempt3.log
Compiler run failed:
Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0x1a7981D87E3b6a95c1516EB820E223fE979896b3". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0x1a7981D87E3b6a95c1516EB820E223fE979896b3". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> src/FlawVerifier.sol:36:38:
   |
36 |     address public constant TARGET = 0x1a7981d87e3b6a95c1516eb820e223fe979896b3;
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

